# MiroFish

./: .env.example  .env.example.omniroute  .gitignore  AGENTS.md  BACKLOG_TECNICO_MIROFISH_INTEIA_V2.md  CLAUDE.md  Consultoria_Pesquisa_Analise_Dados.md  Dockerfile  LENIA_MIROFISH_INTEGRACAO.md  MAPEAMENTO_PT-BR.md  PLANO_ADAPTACAO_MIROFISH_INTEIA.md  PLANO_ADAPTACAO_MIROFISH_INTEIA_V2.md  PRD_MIROFISH_INTEIA_V2.md  PROPOSTA_FINANCIAMENTO_MIRANTE_NEWS.html  PROPOSTA_FINANCIAMENTO_MIROFISH_INTEIA.html  RALPH.md  README-EN.md  README.md  RELATORIO_HELENA_EFESTO_MIROFISH.md  REL_MiroFish_BancoMaster_sim_1984673b7f44.md  codex_proxy.py  docker-compose.yml  llm_proxy_v2.py  package.json  run_sim_igor.py  start_mirofish.sh  stop_mirofish.sh  vercel.json
backend/: _smoke_mirofish.txt  pyproject.toml  requirements.txt  run.py  wsgi.py
backend/app/: __init__.py  config.py
backend/autoresearch/: PLANO_IMPLANTACAO.md  __init__.py  cli.py  cost_guard.py  engine.py  experiment_log.py  git_ops.py
backend/scripts/: enrich_project.py  fix_neo4j_graph_ids.py  helena_report_lab.py  llm_proxy.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
backend/tests/: README.md  conftest.py  test_api_mission_extensions.py  test_autoresearch_method_targets.py  test_decision_packet.py  test_decision_readiness.py  test_decision_readiness_api.py  test_delivery_governance.py  test_executive_package.py  test_forecast_ledger.py  test_golden_case_loader.py  test_graph_api_ontology.py  test_graph_builder.py  test_helena_report_lab.py  test_internal_harness_api.py  test_llm_client_json.py  test_mission_bundle.py  test_mission_selection.py  test_oasis_profile_generator.py  test_ontology_generator_v2.py  test_pagination.py  test_power_catalog.py  test_power_persona_catalog.py  test_report_attribution.py  test_report_bundle_verifier.py  test_retry.py  (+24 more)
(+284 files in other folders)
