[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish - motor versatil de inteligencia coletiva para simulacao e previsao"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Framework principal
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    "waitress>=3.0.0",  # WSGI prod server p/ codex_proxy + llm_proxy (evita MemoryError do Werkzeug em payloads >5MB)

    # Integracao com LLM
    "openai>=1.0.0",
    
    # Simulacao social com OASIS
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    
    # Processamento de arquivos
    "PyMuPDF>=1.24.0",
    # Deteccao de codificacao (inclui arquivos texto fora de UTF-8)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    
    # Utilitarios
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
override-dependencies = [
    "tiktoken>=0.12.0",
    "cryptography>=46.0.7",
    "lxml>=6.1.0",
    "mistune>=3.2.1",
    "nbconvert>=7.17.1",
    "nltk>=3.9.4",
    "pillow>=12.2.0",
    "pygments>=2.20.0",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "python-multipart>=0.0.26",
    "requests>=2.33.0",
    "transformers>=5.0.0rc3",
    "unstructured>=0.18.18",
    "pandas>=2.2.3",
    "torch==2.8.0+cpu",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
